# baller-hub

./: .cursorignore  .gitattributes  .gitignore  .kilocodemodes  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  NEXT_STEPS.md  PLAN.md  README.md  __init__.py  analyze_bbr.py  baller.duckdb  fix_agent_frontmatter.py  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
.opencode/agent/: accessibility-tester.md  ad-security-reviewer.md  agent-installer.md  agent-organizer.md  ai-engineer.md  angular-architect.md  api-designer.md  architect-reviewer.md  azure-infra-engineer.md  backend-developer.md  build-engineer.md  chaos-engineer.md  cli-developer.md  cloud-architect.md  code-reviewer.md  competitive-analyst.md  compliance-auditor.md  context-manager.md  cpp-pro.md  csharp-developer.md  data-analyst.md  data-engineer.md  data-researcher.md  data-scientist.md  database-administrator.md  database-optimizer.md  debugger.md  dependency-manager.md  deployment-engineer.md  devops-engineer.md  devops-incident-responder.md  django-developer.md  documentation-engineer.md  dotnet-core-expert.md  dotnet-framework-4.8-expert.md  dx-optimizer.md  electron-pro.md  elixir-expert.md  error-coordinator.md  error-detective.md  (+66 more)
.opencode/command/: build-context-system.md  commit.md  context.md  test.md  worktrees.md
.opencode/commands/: 01-specify.md  02-plan.md  04-implement.md  analyse-problem.md  analyse.md  analyze-issue.md  cause-and-effect.md  commit.md  create-command.md  create-hook.md  create-ideas.md  create-pr.md  do-in-steps.md  fix-tests.md  fix.md  judge-with-debate.md  memorize.md  plan-do-check-act.md  reset.md  review-local-changes.md  review-pr.md  setup-code-formating.md  setup-codemap-cli.md  tree-of-thoughts.md  update-docs.md  why.md  write-tests.md
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/drafts/: migration.md
.sisyphus/notepads/: frontend_audit_report.md
.sisyphus/plans/: duckdb-build-pipeline.md  postgres-migration.md
.sisyphus/reports/: duckdb-build-pipeline-report.md
docs/: api.md  data_completeness_analysis.md  database_schema.sql  database_schema_v2.sql  development.md  fixtures.md  index.md  page-types.md  scraping-guide.md
docs/reference/: api.md  schema.md
docs/specs/: implementation.md
docs/strategy/: blueprint.md
graphite-demo/: server.js
logs/: .34b62c84f0eef28710c98ed8c83274f658d0b4eb-audit.json  .6d189e9c617113414d024bcde46e9d7da057dc82-audit.json  .91014390e3a8148e2d8b38a7b923f0990496be27-audit.json  .e91997c3e8c790ef63cb1496792b368eddc0074d-audit.json
raw-data/: csv_relationship_analysis.json
raw-data/csv/: LeagueSchedule25_26.csv
scripts/: __init__.py  analyze_csv_relationships.py  build.sh  common.sh  end to end tests.sh  fixture_manifest.json  rescrape_fixtures_comprehensive.py  run_migration.py  validate_fixtures.py  verify_db_connection.py
src/: AGENTS.md  client.py  data.py  errors.py  html.py  http_service.py  logging_config.py  parser_service.py  parsers.py  utilities.py
src/api/: client.py
src/common/: data.py
src/core/: __init__.py  constants.py  domain.py
src/etl/: __init__.py  builder.py  identity.py  loader.py  schema.py  validate.py
src/html/: base_rows.py  box_scores.py  contracts.py  daily.py  game_log.py  play_by_play.py  player.py  schedule.py  search.py  season_totals.py  standings.py
src/output/: fields.py  (+3 more)
src/webapp/backend/: .env.example  AGENTS.md  README.md  alembic.ini  pyproject.toml
src/webapp/backend/alembic/: env.py
src/webapp/backend/alembic/versions/: 20260120_000002_staging_and_views.py
src/webapp/backend/app/: celery_app.py  main.py
src/webapp/backend/app/api/v1/: __init__.py  router.py
src/webapp/backend/app/api/v1/endpoints/: __init__.py  awards.py  drafts.py  games.py  players.py  search.py  seasons.py  standings.py  teams.py
src/webapp/backend/app/core/: config.py
src/webapp/backend/app/db/: connection.py  session.py
src/webapp/backend/app/db/queries/: awards.py  drafts.py  games.py  players.py  search.py  seasons.py  teams.py
src/webapp/backend/app/ingestion/: __init__.py  repositories.py  scraper_service.py  tasks.py
src/webapp/backend/app/models/: AGENTS.md  __init__.py  award.py  draft.py  game.py  player.py  season.py  team.py
src/webapp/backend/app/schemas/: award.py  draft.py  enums.py  game.py  player.py  season.py  standings.py  team.py
src/webapp/backend/app/search/: client.py  indexer.py  tasks.py
src/webapp/backend/app/services/: award_service.py  draft_service.py  game_service.py  player_service.py  search_service.py  season_service.py  standings_service.py  team_service.py
src/webapp/backend/app/validation/: __init__.py  cli.py  models.py  runner.py
src/webapp/backend/tests/: conftest.py
src/webapp/backend/tests/integration/api/: test_awards.py  test_drafts.py
src/webapp/backend/tests/unit/api/: test_health.py
src/webapp/backend/tests/unit/ingestion/: test_mappers.py
src/webapp/backend/tests/unit/services/: test_search_service.py  test_standings_service.py
tests/: AGENTS.md  CLAUDE.md
webapp/: docker-compose.yml
webapp/backend/: .env.example  Dockerfile  pyproject.toml
webapp/backend/alembic/: env.py
webapp/backend/alembic/versions/: 20260119_000001_initial_schema.py  20260120_000002_staging_and_views.py
webapp/backend/app/: celery_app.py  main.py
webapp/backend/app/api/v1/endpoints/: games.py  players.py  seasons.py  standings.py  teams.py
webapp/backend/app/core/: config.py
webapp/backend/app/db/: session.py
webapp/backend/app/ingestion/: __init__.py  mappers.py  repositories.py  scraper_service.py  tasks.py
webapp/backend/app/models/: __init__.py  draft.py  game.py  player.py  team.py
webapp/backend/app/schemas/: game.py  player.py  search.py  season.py  standings.py  team.py
webapp/backend/app/search/: __init__.py  indexer.py  tasks.py
webapp/backend/app/services/: game_service.py  player_service.py  search_service.py  season_service.py  standings_service.py  team_service.py
(+578 files in other folders)
