[project]
name = "basketball-reference-web-scraper"
version = "4.15.4"
description = "A Basketball Reference client that generates data by scraping the website"
authors = [
    {name = "nickth3man", email = "nickth3man@gmail.com"}
]
maintainers = [
    {name = "nickth3man", email = "nickth3man@gmail.com"}
]
license = {text = "MIT"}
keywords = ["NBA", "Basketball", "Reference", "basketball-reference.com"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.1.0",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[dependency-groups]
dev = [
    "pymdown-extensions>=10.2.1",
    "coverage>=7.2.7",
    "pytest>=7.4.4",
    "pytest-recording>=0.13.1",
    "requests-mock>=1.12.1",
    "ty>=0.0.12",
    "ruff>=0.14.13",
    "pre-commit>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "ARG",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"src/html/**/*.py" = ["D102", "D107"]


[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
possibly-missing-attribute = "warn"

[tool.ty.src]
include = ["src/**/*.py", "tests/**/*.py"]
exclude = ["**/site-packages/**"]

[[tool.ty.overrides]]
include = ["tests/**/*.py"]

[tool.ty.overrides.rules]
missing-argument = "ignore"
unresolved-attribute = "ignore"
invalid-assignment = "ignore"

