[project]
name = "basketball-reference-api"
version = "0.1.0"
description = "REST API for local Basketball Reference clone"
authors = [
    {name = "nickth3man", email = "nickth3man@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # Database
    "sqlmodel>=0.0.22",
    "duckdb>=1.1.0",
    "duckdb-engine>=0.13.0",
    
    # Caching
    "redis>=5.2.0",
    "hiredis>=3.0.0",
    
    # Search
    "meilisearch>=0.31.0",
    
    # Real-time
    "python-socketio>=5.11.0",
    
    # Validation & Serialization
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # HTTP Client (for scraper integration)
    "httpx>=0.28.0",

    # Scraper dependencies
    "lxml>=5.1.0",
    "requests>=2.31.0",
    
    # Utilities
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    
    # Task Queue
    "celery[redis]>=5.4.0",
    
    # Monitoring
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "ty>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "error"
possibly-missing-attribute = "error"
unused-ignore-comment = "error"
division-by-zero = "error"
missing-argument = "error"
unresolved-attribute = "error"
invalid-assignment = "error"

[tool.ty.src]
include = ["app/**/*.py", "tests/**/*.py"]
exclude = ["**/site-packages/**"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
